overflow modal using position fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,5 +269,99 @@ Khi làm HTML component:
   transform: translateY(-50%);
 }
 
+.place-list {
+  margin: 32px -8px 40px -8px;
+}
+
+.place-item {
+  float: left;
+  width: 33.3333%;
+  padding: 0 8px;
+}
+
+.place-img {
+  width: 100%;
+  display: block;
+}
+
+.place-img:hover {
+  opacity: 0.5;
+}
+
+.place-info {
+  color: #000;
+  background-color: #fff;
+  padding: 16px;
+  font-size: 15px;
+}
+
+.place-heading {
+  font-size: 15px;
+  margin-bottom: 15px;
+}
+
+.place-date {
+  font-size: 15px;
+  margin: 15px 0;
+  opacity: 0.6;
+}
+
+.place-description {
+  font-size: 15px;
+  margin: 15px 0;
+  line-height: 1.5;
+}
+.place-buy-btn {
+  background-color: #000;
+  color: #fff;
+  font-size: 15px;
+  line-height: 40px;
+  height: 40px;
+  padding: 12px 16px;
+  text-decoration: none;
+}
+
+.place-buy-btn:hover {
+  background-color: #ccc;
+  color: #000;
+}
+
+.clear {
+  clear: both;
+}
 #footer {
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  /* Làm cho class con "modal-container" ở giữa chiều cao : */
+  display: flex;
+  align-items: center;
+  /* Làm cho class con "modal-container" ở giữa chiều ngang : */
+  justify-content: center;
+}
+
+.modal-container {
+  position: absolute;
+  background-color: rgb(212, 150, 150);
+}
+
+.modal-close {
+}
+
+.modal-header {
+}
+
+.modal-body {
+}
+
+.modal-input {
+}
+
+.modal-label {
 }
